--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>WEBHOOK</title>
+  <meta charset="UTF-8" />
+  <title>WEBHOOK | App Configuration</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🚀 WEBHOOK</h1>
-  <p>Deploy Static Sites Instantly</p>
 
-  <input type="file" id="zip" accept=".zip" />
-  <button onclick="deploy()">Deploy</button>
+<div class="container">
 
-  <div id="result"></div>
+  <h1>🚀 App Configuration</h1>
+
+  <!-- App Name -->
+  <label>App Name</label>
+  <input 
+    type="text" 
+    id="appName" 
+    placeholder="my-awesome-app"
+    oninput="updateURL()"
+  />
+
+  <div class="url-preview">
+    Your app will be available at:
+    <div class="url" id="urlPreview">
+      https://host.webhook.online/your-app-name
+    </div>
+  </div>
+
+  <!-- Deployment Method -->
+  <label>Deployment Method</label>
+  <div class="tabs">
+    <button class="tab active" onclick="selectTab('html')">⟨⟩ Paste HTML</button>
+    <button class="tab" onclick="selectTab('zip')">📦 Upload ZIP</button>
+    <button class="tab" onclick="selectTab('github')">🐙 GitHub Link</button>
+  </div>
+
+  <!-- Paste HTML -->
+  <div class="panel active" id="html">
+    <label>HTML Content</label>
+    <textarea placeholder="<!DOCTYPE html>"></textarea>
+  </div>
+
+  <!-- Upload ZIP -->
+  <div class="panel" id="zip">
+    <label>Upload ZIP</label>
+    <input type="file" accept=".zip" />
+  </div>
+
+  <!-- GitHub -->
+  <div class="panel" id="github">
+    <label>GitHub Repository</label>
+    <input type="text" placeholder="https://github.com/user/repo" />
+  </div>
+
+  <button class="deploy">🚀 Deploy App</button>
+
+</div>
 
 <script src="app.js"></script>
 </body>
