--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>WEBHOOK</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Webhook - Static Deployment</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background: #121212;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+    h1 { margin-top: 20px; }
+    button {
+        padding: 12px 24px;
+        font-size: 16px;
+        cursor: pointer;
+        background: linear-gradient(45deg, #ff00ff, #ff9900);
+        border: none;
+        border-radius: 10px;
+        color: #fff;
+        margin-top: 20px;
+        transition: transform 0.2s;
+    }
+    button:hover { transform: scale(1.05); }
+    pre {
+        background: #222;
+        padding: 20px;
+        border-radius: 10px;
+        width: 100%;
+        max-width: 600px;
+        overflow-x: auto;
+        margin-top: 20px;
+    }
+    #deployBar {
+        display: none;
+        margin-top: 20px;
+        padding: 10px;
+        background: #1a1a1a;
+        border-radius: 10px;
+        width: 100%;
+        max-width: 600px;
+        text-align: center;
+    }
+    #deployBar a {
+        color: #ff9900;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    #deployBar a:hover { text-decoration: underline; }
+    #previewFrame {
+        width: 100%;
+        height: 500px;
+        border: 1px solid #444;
+        margin-top: 20px;
+        border-radius: 10px;
+    }
+</style>
 </head>
 <body>
 
-<div class="container">
-  <h1>🚀 App Configuration</h1>
+<h1>Webhook - Static Deployment</h1>
+<p>Click "Deploy" to deploy your site and see the live URL and preview.</p>
+<button id="deployBtn">Deploy</button>
 
-  <label>App Name</label>
-  <input id="appName" placeholder="my-awesome-app" oninput="updateURL()">
+<pre id="console">📡 Waiting for deployment...</pre>
 
-  <div class="url-preview">
-    Your app will be available at:
-    <div class="url" id="urlPreview">/apps/my-awesome-app</div>
-  </div>
-
-  <div class="tabs">
-    <button class="tab active" onclick="switchTab('html')">⟨⟩ Paste HTML</button>
-    <button class="tab" onclick="switchTab('zip')">📦 Upload ZIP</button>
-  </div>
-
-  <div id="html" class="panel active">
-    <textarea id="htmlContent" placeholder="<!DOCTYPE html>"></textarea>
-    <button onclick="deployHTML()">🚀 Deploy</button>
-  </div>
-
-  <div id="zip" class="panel">
-    <input type="file" id="zipFile" accept=".zip">
-    <button onclick="deployZIP()">🚀 Deploy</button>
-  </div>
-
-  <!-- DEPLOY CONSOLE -->
-  <div class="console">
-    <div class="console-title">Deployment Console</div>
-    <pre id="console"></pre>
-  </div>
+<div id="deployBar">
+    Deployment URL: <a id="deployLink" href="#" target="_blank"></a>
 </div>
 
-<script src="app.js"></script>
+<h3>Preview:</h3>
+<iframe id="previewFrame" src=""></iframe>
+
+<script>
+const consoleEl = document.getElementById('console');
+const button = document.getElementById('deployBtn');
+const deployBar = document.getElementById('deployBar');
+const deployLink = document.getElementById('deployLink');
+const previewFrame = document.getElementById('previewFrame');
+
+button.addEventListener('click', async () => {
+    consoleEl.textContent = "📡 Sending request to server...\n";
+    deployBar.style.display = "none";
+    previewFrame.src = "";
+
+    try {
+        // Make POST request to your backend (Render deploy API)
+        const response = await fetch('/deploy', { method: 'POST' });
+        if (!response.ok) throw new Error(`Server error: ${response.status}`);
+
+        const data = await response.json();
+
+        if (data.success) {
+            consoleEl.textContent += "✅ Deployment successful!\n";
+
+            // Show live URL
+            deployLink.href = data.url;
+            deployLink.textContent = data.url;
+            deployBar.style.display = "block";
+
+            // Show deployed site in iframe
+            previewFrame.src = data.url;
+        } else {
+            consoleEl.textContent += "❌ Deployment failed";
+        }
+    } catch(err) {
+        consoleEl.textContent += `🔥 Error: ${err.message}`;
+    }
+});
+</script>
+
 </body>
 </html>
