--- a/public/index.html
+++ b/public/index.html
@@ -5,60 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Webhook - Static Deployment</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #121212;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-    h1 { margin-top: 20px; }
-    button {
-        padding: 12px 24px;
-        font-size: 16px;
-        cursor: pointer;
-        background: linear-gradient(45deg, #ff00ff, #ff9900);
-        border: none;
-        border-radius: 10px;
-        color: #fff;
-        margin-top: 20px;
-        transition: transform 0.2s;
-    }
-    button:hover { transform: scale(1.05); }
-    pre {
-        background: #222;
-        padding: 20px;
-        border-radius: 10px;
-        width: 100%;
-        max-width: 600px;
-        overflow-x: auto;
-        margin-top: 20px;
-    }
-    #deployBar {
-        display: none;
-        margin-top: 20px;
-        padding: 10px;
-        background: #1a1a1a;
-        border-radius: 10px;
-        width: 100%;
-        max-width: 600px;
-        text-align: center;
-    }
-    #deployBar a {
-        color: #ff9900;
-        text-decoration: none;
-        font-weight: bold;
-    }
-    #deployBar a:hover { text-decoration: underline; }
-    #previewFrame {
-        width: 100%;
-        height: 500px;
-        border: 1px solid #444;
-        margin-top: 20px;
-        border-radius: 10px;
-    }
+    body { font-family: Arial; background:#121212; color:#fff; display:flex; flex-direction:column; align-items:center; padding:20px; }
+    h1 { margin-top:20px; }
+    button { padding:12px 24px; font-size:16px; cursor:pointer; background:linear-gradient(45deg,#ff00ff,#ff9900); border:none; border-radius:10px; color:#fff; margin-top:20px; transition:0.2s; }
+    button:hover { transform:scale(1.05); }
+    pre { background:#222; padding:20px; border-radius:10px; width:100%; max-width:600px; overflow-x:auto; margin-top:20px; }
+    #deployBar { display:none; margin-top:20px; width:100%; max-width:600px; padding:15px; border-radius:12px; background:linear-gradient(90deg,#ff00ff,#ff9900); text-align:center; font-weight:bold; color:#fff; box-shadow:0 0 10px #ff00ff50; }
+    #deployBar a { color:#fff; text-decoration:none; }
+    #deployBar a:hover { text-decoration:underline; }
+    #previewFrame { width:100%; height:500px; border:1px solid #444; margin-top:20px; border-radius:10px; }
 </style>
 </head>
 <body>
@@ -69,8 +24,9 @@
 
 <pre id="console">📡 Waiting for deployment...</pre>
 
+<!-- Deployment URL Bar -->
 <div id="deployBar">
-    Deployment URL: <a id="deployLink" href="#" target="_blank"></a>
+    <a id="deployLink" href="#" target="_blank"></a>
 </div>
 
 <h3>Preview:</h3>
@@ -89,7 +45,6 @@ button.addEventListener('click', async () => {
     previewFrame.src = "";
 
     try {
-        // Make POST request to your backend (Render deploy API)
         const response = await fetch('/deploy', { method: 'POST' });
         if (!response.ok) throw new Error(`Server error: ${response.status}`);
 
@@ -98,10 +53,10 @@ button.addEventListener('click', async () => {
         if (data.success) {
             consoleEl.textContent += "✅ Deployment successful!\n";
 
-            // Show live URL
+            // Show live URL inside the URL bar
             deployLink.href = data.url;
             deployLink.textContent = data.url;
-            deployBar.style.display = "block";
+            deployBar.style.display = 'block';
 
             // Show deployed site in iframe
             previewFrame.src = data.url;
